--- a/src/components/productCard/productCard.css
+++ b/src/components/productCard/productCard.css
@@ -1,5 +1,7 @@
 .card-container {
   color: hsl(178, 100%, 50%);
+
+  margin-bottom: 2rem;
 }
 .card {
   display: flex;
@@ -16,6 +18,8 @@
 
 .quantity-span {
   color: palevioletred;
+
+  font-size: 2rem;
 }
 .quantity > h4 {
   display: inline;
@@ -59,4 +63,19 @@
 .btn-row {
   display: flex;
   gap: 10rem;
+}
+
+.buy-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: 2px solid white;
+  width: 120px;
+  height: 50px;
+
+  cursor: pointer;
+}
+.buy-btn > h3 {
+  font-size: 1.5rem;
 }
