--- a/src/components/panier/panier.css
+++ b/src/components/panier/panier.css
@@ -2,5 +2,19 @@
   color: white;
 
   align-self: flex-start;
-  margin-left: 15%;
+  margin-left: 13%;
+}
+.panier-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 1rem;
+  padding: 0.75rem;
+
+  background-color: #13233b;
+  border: 3px solid rgba(139, 172, 218, 0.25);
+  border-radius: 10px;
+
+  gap: 1rem;
 }
