responsive almost ok

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,20 @@
 
   gap: 1rem;
 }
+
+@media (max-width: 900px) {
+  .product-container {
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 100vw;
+    padding: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .product-container {
+    width: 100vw;
+    padding: 0;
+    gap: 0.2rem;
+  }
+}
