--- a/src/components/productCard/productCard.css
+++ b/src/components/productCard/productCard.css
@@ -24,6 +24,10 @@
 
 .h1-title {
   font-size: 2rem;
+  text-decoration: underline;
+  text-decoration-color: #AE8EB2;
+  text-decoration-style: wavy;
+  text-decoration-thickness: 3px;
 }
 
 .quantity {
@@ -153,4 +157,71 @@
   transform: scale(1);
 
   cursor: auto;
+}
+
+/* Tablette */
+@media (max-width: 900px) {
+  .card-container {
+    width: 90vw;
+    height: auto;
+    margin-top: 2rem;
+  }
+  .card {
+    flex-direction: column;
+    height: auto;
+  }
+  .product-display {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 80%;
+
+    margin-right: 0;
+    margin-bottom: 1rem;
+
+    height: 250px;
+
+    overflow: visible;
+  }
+}
+
+/* Mobile */
+@media (max-width: 600px) {
+  .card-container {
+    width: 98vw;
+    margin-top: 1rem;
+  }
+  .card {
+    flex-direction: column;
+    height: auto;
+    padding: 0.5rem;
+  }
+  .product-display {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+
+    height: 250px;
+
+    overflow: visible;
+  }
+  .btn-row {
+    gap: 2rem;
+    flex-direction: column;
+  }
+  .buy-btn {
+    width: 100%;
+    height: 40px;
+    font-size: 1rem;
+  }
+  .h1-title {
+    font-size: 1.2rem;
+  }
+  .quantity > h3,
+  .price > h3 {
+    font-size: 1.2rem;
+  }
 }
