--- a/src/components/productCard/productCard.css
+++ b/src/components/productCard/productCard.css
@@ -1,136 +1,167 @@
 .card-container {
   color: hsl(178, 100%, 50%);
-
   margin-bottom: 2rem;
-
   height: 50vh;
   width: 50vw;
-
   margin-top: 10rem;
 }
-.card {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
 
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   height: 300px;
 }
 
 .card-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
 .h1-title {
   font-size: 2rem;
   text-decoration: underline;
-  text-decoration-color: #AE8EB2;
+  text-decoration-color: #ae8eb2;
   text-decoration-style: wavy;
   text-decoration-thickness: 3px;
 }
 
 .quantity {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   text-align: center;
-
   gap: 0.5rem;
+  -webkit-column-gap: 0.5rem;
+  -moz-column-gap: 0.5rem;
+  column-gap: 0.5rem;
 }
 .quantity > h3 {
   margin: 0;
-
   color: palevioletred;
-
   align-self: center;
-
   font-size: 2rem;
 }
 
 .price {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   text-align: center;
-
   gap: 0.5rem;
+  -webkit-column-gap: 0.5rem;
+  -moz-column-gap: 0.5rem;
+  column-gap: 0.5rem;
 }
 .price > h3 {
   margin: 0;
-
   color: palevioletred;
-
   align-self: center;
-
   font-size: 2rem;
 }
 
 .choices {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 1rem;
-
+  -webkit-column-gap: 1rem;
+  -moz-column-gap: 1rem;
+  column-gap: 1rem;
   color: palevioletred;
+  /* -webkit-box-flex-wrap: wrap;
+     -ms-flex-wrap: wrap;
+         flex-wrap: wrap; */
 }
 .choices > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
-
   padding: 0;
-
   box-sizing: border-box;
-
   width: 2.5rem;
   height: 2.5rem;
-
   border: 2px solid white;
   border-radius: 50%;
-
   background-color: white;
-
   font-size: 1.1rem;
   font-weight: 500;
-
   cursor: pointer;
 }
 
 .product-display {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
-
   background-color: #13233b;
   border-radius: 10px;
-
   width: 50%;
   height: 100%;
-
   margin-right: 5rem;
 }
 
-.product-display svg {
+.product-display > img {
   height: 50%;
   width: auto;
-
   max-width: 100%;
   display: block;
 }
 
 .btn-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   gap: 10rem;
+  -webkit-column-gap: 10rem;
+  -moz-column-gap: 10rem;
+  column-gap: 10rem;
 }
 
 .buy-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
-
   border: 2px solid white;
   width: 120px;
   height: 50px;
-
   margin-top: 1.5rem;
-
   cursor: pointer;
-
   transition: all 250ms;
 }
 .buy-btn > h3 {
@@ -140,23 +171,53 @@
   background-color: #db7093;
   color: #0f1424;
   border: 2px solid white;
-
+  -webkit-transform: scale(1.05);
   transform: scale(1.05);
 }
 .buy-btn:disabled {
   background-color: grey;
-
+  -webkit-transform: scale(1);
   transform: scale(1);
   color: #0f14246a;
-
   cursor: auto;
 }
 .buy-btn:disabled:hover {
   background-color: grey;
   color: #0f14246a;
+  -webkit-transform: scale(1);
   transform: scale(1);
-
   cursor: auto;
+}
+
+/* Ordinateur */
+@media (min-width: 900px) and (max-width: 1550px) {
+  .card-container {
+    width: 90vw;
+    height: 50vh;
+    margin-top: 10rem;
+  }
+  .card {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    height: 300px;
+  }
+  .product-display {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+    margin-right: 5rem;
+    overflow: hidden;
+  }
 }
 
 /* Tablette */
@@ -167,50 +228,98 @@
     margin-top: 2rem;
   }
   .card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     height: auto;
   }
   .product-display {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
-
     width: 80%;
-
     margin-right: 0;
     margin-bottom: 1rem;
-
     height: 250px;
-
     overflow: visible;
   }
 }
 
 /* Mobile */
-@media (max-width: 600px) {
+@media (max-width: 575px) {
   .card-container {
     width: 98vw;
     margin-top: 1rem;
+    margin-bottom: 5rem;
   }
   .card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     height: auto;
     padding: 0.5rem;
   }
-  .product-display {
+  .card-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
-
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    width: 90%;
+  }
+  .product-display {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     width: 100%;
-
     height: 250px;
-
     overflow: visible;
+  }
+  .choices {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    gap: 1rem;
+    -webkit-column-gap: 1rem;
+    -moz-column-gap: 1rem;
+    column-gap: 1rem;
   }
   .btn-row {
     gap: 2rem;
+    -webkit-column-gap: 2rem;
+    -moz-column-gap: 2rem;
+    column-gap: 2rem;
+    width: 80%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    align-self: center;
   }
   .buy-btn {
     width: 100%;
@@ -218,7 +327,7 @@
     font-size: 1rem;
   }
   .h1-title {
-    font-size: 1.2rem;
+    font-size: 2rem;
   }
   .quantity > h3,
   .price > h3 {
