--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -105,3 +105,46 @@ footer {
     transform: translateY(-2px);
   }
 }
+
+/* Tablette */
+@media (max-width: 900px) {
+  footer {
+    width: 100%;
+  }
+}
+
+@media (max-width: 575px) {
+  footer {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 98vw;
+    padding: 0.5rem 0;
+    margin-bottom: 2rem;
+    text-align: center;
+  }
+
+  .copyright-span-1 {
+    margin-left: 0;
+    margin-bottom: 0.5rem;
+    width: 100%;
+    display: block;
+  }
+
+  .socials-ul {
+    margin: 0.5rem 0 0 0;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+
+  .wave-text {
+    margin-left: 0;
+    margin-top: 0.5rem;
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+}
