--- a/src/components/productCard/productCard.css
+++ b/src/components/productCard/productCard.css
@@ -163,6 +163,7 @@
   margin-top: 1.5rem;
   cursor: pointer;
   transition: all 250ms;
+  border-radius: 10px;
 }
 .buy-btn > h3 {
   font-size: 1.5rem;
