--- a/src/components/productCard/productCard.css
+++ b/src/components/productCard/productCard.css
@@ -334,4 +334,14 @@
   .price > h3 {
     font-size: 1.2rem;
   }
+  .mb-choices {
+    display: flex;
+    flex-direction: row;
+
+    gap: 0.5rem;
+  }
+  .h4-title {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
 }
